--- a/conf/application.conf
+++ b/conf/application.conf
@@ -19,33 +19,18 @@ include "backend.conf"
 
 appName = enrolments-orchestrator
 
-# An ApplicationLoader that uses Guice to bootstrap the application.
 play.application.loader = "uk.gov.hmrc.play.bootstrap.ApplicationLoader"
 
-# Primary entry point for all HTTP requests on Play applications
-play.http.requestHandler = "uk.gov.hmrc.play.bootstrap.http.RequestHandler"
-
-# Provides an implementation of AuditConnector. Use `uk.gov.hmrc.play.bootstrap.AuditModule` or create your own.
-# An audit connector must be provided.
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.AuditModule"
-
-# Provides an implementation of MetricsFilter. Use `uk.gov.hmrc.play.graphite.GraphiteMetricsModule` or create your own.
-# A metric filter must be provided
+play.modules.enabled += "uk.gov.hmrc.play.bootstrap.AuthModule"
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.graphite.GraphiteMetricsModule"
-
-# Provides an implementation and configures all filters required by a Platform frontend microservice.
-play.modules.enabled += "uk.gov.hmrc.play.bootstrap.MicroserviceModule"
-play.http.filters = "uk.gov.hmrc.play.bootstrap.filters.MicroserviceFilters"
-
-# Default http client
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientModule"
+play.modules.enabled += "uk.gov.hmrc.play.bootstrap.MicroserviceModule"
 
-# Json error handler
-play.http.errorHandler = "uk.gov.hmrc.play.bootstrap.http.JsonErrorHandler"
-
-# Play Modules
-# ~~~~
-# Additional play modules can be added here
+play.http.requestHandler  = "uk.gov.hmrc.play.bootstrap.http.RequestHandler"
+play.http.errorHandler    = "uk.gov.hmrc.play.bootstrap.http.JsonErrorHandler"
+play.http.filters         = "uk.gov.hmrc.play.bootstrap.filters.MicroserviceFilters"
+play.http.router          = prod.Routes
 
 
 # Session Timeout
@@ -63,54 +48,13 @@ play.crypto.secret = "yMpBY6o30kb6q7cPdtiQILTeBg6X7aS17uuQXeXYYhplmcYqacCCnm7mSI
 
 # Session configuration
 # ~~~~~
-application.session.httpOnly = false
-application.session.secure = false
+application.session.httpOnly  = false
+application.session.secure    = false
 
 # The application languages
 # ~~~~~
 play.i18n.langs = ["en"]
 
-# Router
-# ~~~~~
-# Define the Router object to use for this application.
-# This router will be looked up first when the application is starting up,
-# so make sure this is the entry point.
-# Furthermore, it's assumed your route file is named properly.
-# So for an application router like `my.application.Router`,
-# you may need to define a router file `conf/my.application.routes`.
-# Default to Routes in the root package (and conf/routes)
-# !!!WARNING!!! DO NOT CHANGE THIS ROUTER
-play.http.router = prod.Routes
-
-
-# Controller
-# ~~~~~
-# By default all controllers will have authorisation, logging and
-# auditing (transaction monitoring) enabled.
-# The below controllers are the default exceptions to this rule.
-
-controllers {
-
-  # 300 is the default, you may need to change this according to your needs
-  confidenceLevel = 300
-
-  uk.gov.hmrc.enrolmentsorchestrator.controllers.MicroserviceHelloWorldController = {
-    needsAuth = false
-    needsLogging = false
-    needsAuditing = false
-  }
-
-}
-
-
-# Evolutions
-# ~~~~~
-# You can disable evolutions if needed
-# evolutionplugin=disabled
-
-# Logger
-# ~~~~~
-# You can also configure logback (http://logback.qos.ch/), by providing a logger.xml file in the conf directory .
 
 # Root logger:
 logger.root = ERROR
@@ -146,6 +90,7 @@ auditing {
 
 
 microservice {
+
   metrics {
     graphite {
       host = graphite
@@ -157,16 +102,16 @@ microservice {
 
   services {
 
+    auth {
+      host=localhost
+      port=8500
+    }
+
     enrolment-store-proxy {
       host = localhost
       port = 9595
     }
 
-    tax-enrolments {
-      host = localhost
-      port = 9995
-    }
-
   }
-}
 
+}
