--- a/conf/application.conf
+++ b/conf/application.conf
@@ -49,7 +49,7 @@ application.session.secure    = false
 play.i18n.langs = ["en"]
 
 basicAuthentication {
-  username = username
+  username = AgentTermDESUser
   password = password
 }
 
