AIV-1964: add agent-status-change

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -113,6 +113,11 @@ microservice {
       port = 9995
     }
 
+    agent-status-change {
+      host = localhost
+      port = 9424
+    }
+
   }
 }
 
