--- a/conf/application.conf
+++ b/conf/application.conf
@@ -26,6 +26,7 @@ play.modules.enabled += "uk.gov.hmrc.play.bootstrap.AuthModule"
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.graphite.GraphiteMetricsModule"
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientModule"
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.MicroserviceModule"
+play.modules.enabled += "uk.gov.hmrc.enrolmentsorchestrator.config.StartupModule"
 
 play.http.requestHandler  = "uk.gov.hmrc.play.bootstrap.http.RequestHandler"
 play.http.errorHandler    = "uk.gov.hmrc.play.bootstrap.http.JsonErrorHandler"
@@ -53,15 +54,6 @@ basicAuthentication {
   password = password
 }
 
-# Root logger:
-logger.root = ERROR
-
-# Logger used by the framework:
-logger.play = INFO
-
-# Logger provided to your application:
-logger.application = DEBUG
-
 # Metrics plugin settings - graphite reporting is configured on a per env basis
 metrics {
   name = ${appName}
@@ -85,6 +77,10 @@ auditing {
   }
 }
 
+oneOffDataCorrection {
+  enabled = false
+  data = []
+}
 
 microservice {
   metrics {
