GG-5249: migrated to play.http.session.httpOnly key

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -42,7 +42,7 @@ play.crypto.secret = "yMpBY6o30kb6q7cPdtiQILTeBg6X7aS17uuQXeXYYhplmcYqacCCnm7mSI
 
 # Session configuration
 # ~~~~~
-application.session.httpOnly  = false
+play.http.session.httpOnly  = false
 application.session.secure    = false
 
 # The application languages
